--- a/shared/latex/neural-networks/deep-optimize.tex
+++ b/shared/latex/neural-networks/deep-optimize.tex
@@ -10,7 +10,7 @@
 
 \begin{frame}{Explosion des gradients}
   Exploding Gradient $\Rightarrow$ Gradient clipping
-  \V{["gradient-clipping", "tw", 0.9] | image}
+  \V{["gradient-clipping-nzmog", "tw", 0.9] | image}
   Dans le cadre des réseaux réccurents $\Rightarrow$ initialisation avec des matrices orthogonales
 \end{frame}
 
