--- a/shared/latex/neural-networks/regularisation.tex
+++ b/shared/latex/neural-networks/regularisation.tex
@@ -1,6 +1,6 @@
 \begin{frame}
   \frametitle{Sur-apprentissage (et sous-apprentissage)}
-  \V{["over-underfitting", "tw", 0.6] | image}
+  \V{["overfitting-train-nzmog", "tw", 0.6] | image}
 \end{frame}
 
 \begin{frame}{Par la pénalisation de l'utilisation des paramètres}
