--- a/shared/latex/machine-learning/bonnes-pratiques.tex
+++ b/shared/latex/machine-learning/bonnes-pratiques.tex
@@ -27,7 +27,7 @@
     \end{center}
   \end{minipage}\hfill
   \begin{minipage}[l]{0.49\linewidth}
-    \V{["overfitting", "th", 0.3] | image}
+    \V{["overfitting-train-nzmog", "th", 0.3] | image}
   \end{minipage}\hfill
   Techniques variées en fonction du modèle :
   \begin{itemize}
