--- a/shared/latex/machine-learning/intro.tex
+++ b/shared/latex/machine-learning/intro.tex
@@ -1,5 +1,5 @@
 \begin{frame}{Un domaine vaste}
-  \V{["data-science", "tw", 1] | image}
+  \V{["data-science-nzmog", "tw", 1] | image}
 \end{frame}
 
 \begin{frame}{Hiérarchie des noms}
@@ -59,7 +59,7 @@
 \begin{frame}{Exemple --- Régression linéaire multiple}
   Prédire une valeur en fonction de plusieurs autres
 
-  \V{["regression-hyperplan", "th", 0.8] | image}
+  \V{["regression-hyperplan-nzmog", "th", 0.8] | image}
 \end{frame}
 
 \begin{frame}{Exemple --- Classification avec des réseaux à convolutions}
