--- a/shared/latex/machine-learning/math-analyse.tex
+++ b/shared/latex/machine-learning/math-analyse.tex
@@ -34,5 +34,5 @@
 \begin{frame}
   \frametitle{Exemple en 2 dimensions}
   dérivée → gradient
-  \V{["gradient-descent", "th", 0.8] | image}
+  \V{["gradient-nzmog", "th", 0.65] | image}
 \end{frame}
