--- a/shared/latex/supervised/svm.tex
+++ b/shared/latex/supervised/svm.tex
@@ -25,17 +25,12 @@
 
 \begin{frame}
   \frametitle{Support Vector Machine}
-  \V{["separable-problem-nonlinear-solution-nzmog", "tw", 0.8] | image}
+  \V{["separable-problem-nonlinear-solution-nzmog", "th", 0.75] | image}
 \end{frame}
 
 \begin{frame}
   \frametitle{Support Vector Machine}
-  \V{["separable-problem-nonlinear-solution-nzmog", "tw", 0.8] | image}
-\end{frame}
-
-\begin{frame}
-  \frametitle{Support Vector Machine}
-  \V{["separable-problem-nonlinear-kernelsvm-nzmog", "tw", 0.9] | image}
+  \V{["separable-problem-nonlinear-kernelsvm-nzmog", "th", 0.75] | image}
 \end{frame}
 
 \begin{frame}
