--- a/shared/latex/neural-networks/optimize.tex
+++ b/shared/latex/neural-networks/optimize.tex
@@ -34,7 +34,7 @@
 
 \begin{frame}{Taille du batch}
   Usuellement, des puissances de 2, pour optimiser les ressources GPU
-  \V{["batch-size-effect-nzmog", "tw", 0.8] | image}
+  \V{["batch-size-effect-nzmog", "th", 0.7] | image}
 \end{frame}
 
 \begin{frame}{Taille des couches}
