--- a/shared/latex/python/pytest.tex
+++ b/shared/latex/python/pytest.tex
@@ -33,7 +33,7 @@
 \end{frame}
 
 \begin{frame}{Mémoisation des fixtures}
-  \texttt{pytest} définit plusieurs niveaux de calcul des fixutres~:
+  \texttt{pytest} définit plusieurs niveaux de calcul des fixtures~:
 
   \begin{itemize}[<+->]
     \item Chaque fonction (par défaut)
