--- a/shared/latex/python/packaging.tex
+++ b/shared/latex/python/packaging.tex
@@ -19,6 +19,7 @@
 
   \begin{itemize}[<+->]
     \item \texttt{setup.py}, \& \texttt{setuptools}
+    \item \texttt{Pipenv}
     \item \texttt{poetry}
   \end{itemize}
 
