--- a/shared/latex/python/deployment.tex
+++ b/shared/latex/python/deployment.tex
@@ -30,9 +30,9 @@
     \end{itemize}
   \end{block}
 
-  \begin{block}{Déploiement continu}
+  \onslide<+->{\begin{block}{Déploiement continu}
     Comme la livraison continue, mais déploiement régulier et automatique.
-  \end{block}
+  \end{block}}
 \end{frame}
 
 \begin{frame}{Bonnes pratiques}
