--- a/shared/latex/big-questions/generic.tex
+++ b/shared/latex/big-questions/generic.tex
@@ -10,7 +10,8 @@
 \end{frame}
 
 \begin{frame}{Données}
-  Les \textbf{données} coûtent cher (récolte, nettoyage, \#Data~>~1M). 
+  Les \textbf{données} coûtent cher (récolte, nettoyage, \#Data~>~1M). \\
+  Exemple d'outil : "Amazon Mechanical Turc"
   \V{["amazon-mechanical-turc", "th", 0.5] | image}
 \end{frame}
 
