update image-instruction.lst; minor changes shared/latex shared/codes

--- a/orsys/mlb/j1/latex/about/description.tex
+++ b/orsys/mlb/j1/latex/about/description.tex
@@ -5,7 +5,7 @@
 
 \begin{frame}{Prérequis}
   \begin{itemize}
-  \item Connaissances de base en statistiques
+  \item Connaissances de base en algèbre et statistiques
   \item Connaissances de base en python
   \item Avoir un \textbf{compte Google} afin de pouvoir faire les TPs dans \bluelink{https://colab.research.google.com/notebooks/welcome.ipynb}{Google Colaboratory}
   \end{itemize}
