--- a/shared/latex/machine-learning/intro.tex
+++ b/shared/latex/machine-learning/intro.tex
@@ -19,6 +19,15 @@
 \end{frame}
 
 \begin{frame}{Matière première : les données}
+  On cherche une fonction qui à :
+  \begin{itemize}
+    \item en entrée : N données en dimension D
+    \item en sortie : N sorties en dimension K
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{Matière première : les données}
+  Chaque dimension du problème est représentée par une variable : 
   \V{["variables", "tw", 0.8] | image}
 \end{frame}
 
