--- a/shared/latex/neural-networks/rnn-keras.tex
+++ b/shared/latex/neural-networks/rnn-keras.tex
@@ -1,3 +1,9 @@
+
+\begin{frame}
+  \frametitle{Dimension du tensor d'entrée}
+  \mintedpy{tf-keras/rnn-input-dim}
+\end{frame}
+
 \begin{frame}{RNN simple}
   \mintedpy{tf-keras/rnn}
 \end{frame}
