--- a/shared/latex/about/horaires-2j-orsys.tex
+++ b/shared/latex/about/horaires-2j-orsys.tex
@@ -1,7 +1,6 @@
 \begin{frame}{Emploi du temps}
   \begin{itemize}
   \item 2 jours de 9h à 12h30 et de 14h à 17h30
-  \item Le dernier jour, on termine à 15h30.
-    Donc à 15h00 on commence à remplir les documents administratifs.
+  \item Le dernier jour, à 17h00 on fini de remplir les documents administratifs.
   \end{itemize}
 \end{frame}
