--- a/shared/latex/neural-networks/cnn-keras.tex
+++ b/shared/latex/neural-networks/cnn-keras.tex
@@ -1,5 +1,10 @@
 
 \begin{frame}
+  \frametitle{Dimension du tensor d'entrée}
+  \mintedpy{tf-keras/cnn-input-dim}
+\end{frame}
+
+\begin{frame}
   \frametitle{Définition d'un modèle CNN}
   \mintedpycode{tf-keras/cnn}
 \end{frame}
