Fix print template
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/templates/jinja2/print.tex
+++ b/templates/jinja2/print.tex
@@ -4,6 +4,6 @@
 
 \begin{document}
 %% for pdf_path in pdf_paths:
-\includepdf[pages=-,nup=\VAR{format}]{\VAR{pdf_path}}
+\includepdf[pages=-,nup=\V{format}]{\V{pdf_path}}
 %% endfor
 \end{document}
