--- a/orsys/INTRA/2020-09-natixis/j1/latex/tools/notebooks.tex
+++ b/orsys/INTRA/2020-09-natixis/j1/latex/tools/notebooks.tex
@@ -1,14 +1,12 @@
-\begin{frame}
-  \frametitle{Présentation}
+\begin{frame}{Présentation}
   Jupyter est un environnement de développement avec interface web.
 
   Plus de 40 langages de programmation supportés, dont Python.
 
-  \imgth[0.5]{jupyter_logo}
+  \V{["logos/jupyter", "th", 0.5] | image}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Démonstration}
+\begin{frame}{Démonstration}
   Une démonstration vaut mieux qu'un long discours !
 
   \bluelink{https://colab.research.google.com/gist/m09/cda84235303b787cb81714dcb62ca132/introduction-aux-notebooks-et-python.ipynb}{Jupyter Notebook Demo}
