--- a/formation.sty
+++ b/formation.sty
@@ -7,6 +7,7 @@
 \usepackage{xparse}
 \usepackage{ifthen}
 \usepackage{amsmath}
+\usepackage{siunitx}
 \usepackage{amssymb}
 \usepackage{tabularx}
 \usepackage{booktabs}
