--- a/shared/latex/natural-language-processing/ml-nlp.tex
+++ b/shared/latex/natural-language-processing/ml-nlp.tex
@@ -2,8 +2,8 @@
   Plusieurs noms~:
   \begin{itemize}[<+->]
     \item Traitement du texte
-    \item Traitement du langage (TAL)
-    \item Traitement des langues naturelles (TALN)
+    \item Traitement automatique des langues (TAL)
+    \item Traitement automatique du langage naturel (TALN)
     \item Natural Language Processing (NLP)
   \end{itemize}
 
