--- a/shared/latex/natural-language-processing/preprocessing.tex
+++ b/shared/latex/natural-language-processing/preprocessing.tex
@@ -15,6 +15,10 @@
   Une source $\Rightarrow$ un «~web scraper~»
 \end{frame}
 
+\begin{frame}{Caractères accentués et spéciaux}
+  \mintedcustom{demo-special-character}{py}{text}
+\end{frame}
+
 \begin{frame}{Tokenisation}
   Séparer une chaîne de caractères en tokens n'est pas trivial :
 
