--- a/shared/latex/natural-language-processing/pattern.tex
+++ b/shared/latex/natural-language-processing/pattern.tex
@@ -1,12 +1,11 @@
-\begin{frame}
-  \frametitle{Introduction}
-  Capture et manipulation de chaînes de caractères par le biais de motifs génériques. \\
-  \newline
-  Exemple : Rajouter un espace après chaque ponctuation (si il n'y en a pas déjà) \\
-  \newline
-  "Le chat mange,délicatement, ses croquettes.Jean est attendri." \\
-  $\rightarrow$ \\
-  "Le chat mange, délicatement, ses croquettes. Jean est attendri. " \\
+\begin{frame}{Introduction}
+  Capture et manipulation de chaînes de caractères par le biais de motifs génériques.
+
+  \begin{exampleblock}{Exemple~: rajouter un espace après chaque ponctuation}
+    «~Le chat mange,délicatement, ses croquettes.Jean est attendri.~» \\
+    $\rightarrow$ \\
+    «~Le chat mange,délicatement, ses croquettes. Jean est attendri. ~» \\
+  \end{exampleblock}
 \end{frame}
 
 \begin{frame}
@@ -20,138 +19,113 @@
   \end{itemize}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Regex en Python : Les caractères spéciaux}
-  \begin{itemize}
-  \item \makebox[1cm][c]{\^{}} début de ligne (ou négation dans un ensemble)
-  \item \makebox[1cm][c]{\$} fin de ligne
-  \item \makebox[1cm][c]{.} joker (capture n'importe quel caractère) 
-  \item \makebox[1cm][c]{[} ouverture d'un ensemble de caractère
-  \item \makebox[1cm][c]{]} fermeture d'un ensemble de caractère
-  \item \makebox[1cm][c]{(} ouverture de groupe de capture
-  \item \makebox[1cm][c]{)} fermeture de groupe de capture
-  \item \makebox[1cm][c]{?} de 0 à 1 occurence du motif
-  \item \makebox[1cm][c]{*} de 0 à $\infty$ occurences du motif
-  \item \makebox[1cm][c]{+} de 1 à $\infty$ occurences du motif
-  \item \makebox[1cm][c]{\{} ouverture d'intervalle de répétition du motif
-  \item \makebox[1cm][c]{\}} fermeture d'intervalle de répétition du motif
-  \item \makebox[1cm][c]{\textbackslash} caractère spécialement spécial
-  \item \makebox[1cm][c]{\textbar} OU logique dans un groupe de capture
-  \end{itemize}
+\begin{frame}{Caractères spéciaux}
+  \begin{description}
+  \item[\texttt{\^{}}] début de ligne (ou négation dans un ensemble)
+  \item[\texttt{\$}] fin de ligne
+  \item[\texttt{.}] joker (capture n'importe quel caractère) 
+  \item[\texttt{[}] ouverture d'un ensemble de caractère
+  \item[\texttt{]}] fermeture d'un ensemble de caractère
+  \item[\texttt{(}] ouverture de groupe de capture
+  \item[\texttt{)}] fermeture de groupe de capture
+  \item[\texttt{?}] 0 ou 1 occurence du motif
+  \item[\texttt{*}] de 0 à $\infty$ occurences du motif
+  \item[\texttt{+}] de 1 à $\infty$ occurences du motif
+  \item[\texttt{\char`\{}] ouverture d'intervalle de répétition du motif
+  \item[\texttt{\char`\}}] fermeture d'intervalle de répétition du motif
+  \item[\texttt{\textbackslash}] caractère spécialement spécial
+  \item[\texttt{\textbar}] OU logique dans un groupe de capture
+  \end{description}
 \end{frame}
 
-\begin{frame}
-  \frametitle{re.match}
-  \mintedpy{regex/demo-intro-match}
+\begin{frame}{\texttt{re.match}}
+  \mintedcustom{regex/demo-intro-match}{py}{text}
 \end{frame}
 
-\begin{frame}
-  \frametitle{re.search}
-  \mintedpy{regex/demo-intro-search}
+\begin{frame}{\texttt{re.search}}
+  \mintedcustom{regex/demo-intro-search}{py}{text}
 \end{frame}
 
-\begin{frame}
-  \frametitle{re.search}
-  \mintedpy{regex/demo-search}
+\begin{frame}{\texttt{re.search}}
+  \mintedcustom{regex/demo-search}{py}{text}
 \end{frame}
 
-\begin{frame}
-  \frametitle{re.findall}
+\begin{frame}{\texttt{re.findall}}
   \mintedpy{regex/demo-findall}
 \end{frame}
 
-\begin{frame}
-  \frametitle{re.finditer}
-  \mintedpy{regex/demo-finditer}
+\begin{frame}{\texttt{re.finditer}}
+  \mintedcustom{regex/demo-finditer}{py}{text}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Le caractère \textbackslash}
-  '\textbackslash' est un caractère de contôle spécial. \\
-  Permet de définir des groupes de caractères usuels :
-  \begin{itemize}
-  \item \textbackslash d : caractère numérique $\iff$ {[0-9]}
-  \item \textbackslash D : caractère non-numérique $\iff$ {[\^{}0-9]}
-  \item \textbackslash s : caractère "blanc" $\iff$ {[ \textbackslash t\textbackslash n\textbackslash r\textbackslash f\textbackslash v]}
-  \item \textbackslash S : caractère non-"blanc" $\iff$ {[\^{} \textbackslash t\textbackslash n\textbackslash r\textbackslash f\textbackslash v]}
-  \item \textbackslash w : caractère alpha-numérique $\iff$ {[a-zA-Z0-9\_]}
-  \item \textbackslash W : caractère non-alpha-numérique $\iff$ {[\^{}a-zA-Z0-9\_]}
-  \end{itemize}
-  Plus généralement \textbackslash permet de capturer les caractères spéciaux (ex: \textbackslash . pour capturer le point)
+\begin{frame}{Le caractère \texttt{\textbackslash}}
+  \texttt{\textbackslash} est un caractère de contôle spécial. \\
+  Permet de définir des groupes de caractères~:
+  \begin{description}
+  \item[\texttt{\textbackslash d}] numériques $\iff$ \texttt{[0-9]}
+  \item[\texttt{\textbackslash D}] non-numériques $\iff$ \texttt{[\^{}0-9]}
+  \item[\texttt{\textbackslash s}] blancs $\iff$ \texttt{[ \textbackslash t\textbackslash n\textbackslash r\textbackslash f\textbackslash v]}
+  \item[\texttt{\textbackslash S}] non-blancs $\iff$ \texttt{[\^{} \textbackslash t\textbackslash n\textbackslash r\textbackslash f\textbackslash v]}
+  \item[\texttt{\textbackslash w}] alpha-numériques $\iff$ \texttt{[a-zA-Z0-9\_]}
+  \item[\texttt{\textbackslash W}] non-alpha-numériques $\iff$ \texttt{[\^{}a-zA-Z0-9\_]}
+  \end{description}
+  Plus généralement \texttt{\textbackslash} permet de capturer les caractères spéciaux (ex: \texttt{\textbackslash .} pour capturer le point)
 \end{frame}
 
-\begin{frame}
-  \frametitle{Chaîne de caractère brute}
-  Python utilise par défaut des chaînes de caractères littérale : \textbackslash est déjà un caractère spécial...
-  \mintedpy{regex/demo-str-lit-brut}
+\begin{frame}{Chaîne de caractère brute}
+  Python utilise par défaut des chaînes de caractères littérale : \texttt{\textbackslash} est déjà un caractère spécial...
+  \mintedcustom{regex/demo-str-lit-brut}{py}{text}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Chaîne de caractère brute}
-  \mintedpy{regex/demo-pattern-brut}
+\begin{frame}{Chaîne de caractère brute}
+  \mintedcustom{regex/demo-pattern-brut}{py}{text}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Compilation de pattern : Flag}
+\begin{frame}{Compilation de pattern --- Flag \texttt{re.IGNORECASE} (\texttt{re.I})}
   Rendre insensible à la casse
   \mintedpy{regex/demo-pattern-compile-flag-ignorecase}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Compilation de pattern : Flag}
-  Forcer \textbackslash w à fonctionner en mode ASCII
+\begin{frame}{Compilation de pattern --- Flag \texttt{re.ASCII} (\texttt{re.A})}
+  Forcer \texttt{\textbackslash w} à fonctionner en mode ASCII
   \mintedpy{regex/demo-pattern-compile-flag-ascii}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Compilation de pattern : Flag}
-  D'autre Flags :
-  \begin{itemize}
-  \item re.DOTALL le caractère spécial '.' capture aussi les retour chariot
-  \item re.LOCALE utilisation de la variable LOCALE de langage pour les captures
-  \item re.MULTILINE Correspondance multi-lignes, affecte \^{} et \$
-  \end{itemize}
+\begin{frame}{Compilation de pattern --- Flag \texttt{re.VERBOSE} (\texttt{re.X})}
+  Permet l'écriture d'expressions régulières «~lisibles~»
+  \mintedpycode{regex/demo-pattern-compile-flag-verbose}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Compilation de pattern : Flag}
-  Permet l'écriture d'expression régulière "lisible"
-  \mintedpy{regex/demo-pattern-compile-flag-verbose}
+\begin{frame}{Compilation de pattern --- Autres flags}
+  \begin{description}
+  \item[\texttt{re.DOTALL}] Le caractère spécial \texttt{.} capture aussi les retours chariot
+  \item[\texttt{re.LOCALE}] Utilisation des définitions de la locale courante pour les captures
+  \item[\texttt{re.MULTILINE}] \texttt{\^{}} et \texttt{\$} matchent les début et fin de chaîne, et non de ligne
+  \end{description}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Groupe de capture}
-  \mintedpy{regex/demo-groups}
+\begin{frame}{Groupe de capture}
+  \mintedcustom{regex/demo-groups}{py}{text}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Répétition de groupe}
-  \mintedpy{regex/demo-groups-repeat}
+\begin{frame}{Répétition de groupe}
+  \mintedcustom{regex/demo-groups-repeat}{py}{text}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Remplacements}
-  \mintedpy{regex/demo-replace}
+\begin{frame}{Remplacements}
+  \mintedcustom{regex/demo-replace}{py}{text}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Remplacements avec groupes}
+\begin{frame}{Remplacements avec groupes}
   Réutilisation des groupes de capture dans la chaîne de remplacement :
   \mintedpy{regex/demo-replace-groups}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Tokenisation : Split}
+\begin{frame}{Tokenisation : Split}
   \mintedpy{regex/demo-split}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Caractères accentués et spéciaux}
-  \mintedpy{regex/demo-special-character}
-\end{frame}
-
-\begin{frame}
-  \frametitle{Pour aller plus loin (ou plus vite)}
+\begin{frame}{Pour aller plus loin (ou plus vite)}
   Il existe encore beaucoup de subtilités et techniques avancées...\\
   \newline
   Beaucoup de gros fichiers ? `sed` reste la solution optimale depuis les années 70.
