Fix slide syntax
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/natural-language-processing/pattern.tex
+++ b/shared/latex/natural-language-processing/pattern.tex
@@ -126,8 +126,8 @@
 \end{frame}
 
 \begin{frame}{Pour aller plus loin (ou plus vite)}
-  Il existe encore beaucoup de subtilités et techniques avancées...\\
-  \newline
+  Il existe encore beaucoup de subtilités et techniques avancées…
+
   Beaucoup de gros fichiers ? `sed` reste la solution optimale depuis les années 70.
 \end{frame}
 
