--- a/shared/latex/supervised/classification.tex
+++ b/shared/latex/supervised/classification.tex
@@ -39,7 +39,7 @@
 
 \begin{frame}
   \frametitle{Classification}
-  Critère des moindre carré (MSE) = 0.12
+  Critère de l'erreur absolue (MAE) = 0.12
   \newline
   \newline
   \newline
@@ -64,7 +64,7 @@
 
 \begin{frame}
   \frametitle{Classification}
-  Critère des moindre carré (MSE) = 0.12
+  Critère de l'erreur absolue (MAE) = 0.12
   \newline
   \newline
   \newline
