--- a/shared/latex/python/production/environment.tex
+++ b/shared/latex/python/production/environment.tex
@@ -18,7 +18,7 @@
 \end{frame}
 
 \begin{frame}{Utilisation de \texttt{venv}}
-  \mintedcustomcode{python/environment/venv}{console}
+  \mintedcustomcode{python/production/environment/venv}{console}
 \end{frame}
 
 \begin{frame}{Contrôle des dépendances}
@@ -62,5 +62,5 @@
 \end{frame}
 
 \begin{frame}{Exemple de \texttt{Dockerfile}}
-  \mintedcustomcode{python/environment/Dockerfile}{docker}
+  \mintedcustomcode{python/production/environment/Dockerfile}{docker}
 \end{frame}
