--- a/shared/latex/python/testing/testing.tex
+++ b/shared/latex/python/testing/testing.tex
@@ -91,7 +91,7 @@
     \item Implémentés par \texttt{unittest.mock} ou \texttt{pytest.monkeypatching}.
   \end{itemize}
 
-  \onslide<+->{\mintedpycode{python/testing/mocking}}
+  \onslide<+->{\mintedpycode{python/testing/testing/mocking}}
 \end{frame}
 
 \begin{frame}{Techniques de test --- Génération}
@@ -117,7 +117,7 @@
     \item Rend explicite beaucoup d'attentes sur les fonctions et classes
   \end{itemize}
 
-  \mintedpycode{python/testing/contracts}
+  \mintedpycode{python/testing/testing/contracts}
 \end{frame}
 
 \begin{frame}{Bonnes pratiques}
@@ -132,7 +132,7 @@
 \end{frame}
 
 \begin{frame}{Inversion de contrôle --- Couplage}
-  \mintedpycode{python/testing/coupling}
+  \mintedpycode{python/testing/testing/coupling}
 \end{frame}
 
 \begin{frame}{Inversion de contrôle --- Cohésion}
@@ -142,7 +142,7 @@
 
   Permet l'injection de dépendances.
 
-  \mintedpycode{python/testing/cohesion}
+  \mintedpycode{python/testing/testing/cohesion}
 \end{frame}
 
 \begin{frame}{Mise en place en Python}
