--- a/shared/latex/python/testing/unittest.tex
+++ b/shared/latex/python/testing/unittest.tex
@@ -35,13 +35,13 @@
 \end{frame}
 
 \begin{frame}{Exemple d'utilisation}
-  \mintedpycode{python/unittest/simple_usage}
+  \mintedpycode{python/testing/unittest/simple_usage}
 \end{frame}
 
 \begin{frame}{Appel de la suite de test}
   Pour faire tourner la suite de tests, on utilise le plus souvent~:
 
-  \mintedcustomcode{python/unittest/run}{console}
+  \mintedcustomcode{python/testing/unittest/run}{console}
 
   Il est aussi possible de spécifier un fichier, une classe ou une fonction à exécuter.
 \end{frame}
