Fix an example in regex section
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/python/regexes/regexes.tex
+++ b/shared/latex/python/regexes/regexes.tex
@@ -118,7 +118,7 @@
 
 \begin{frame}{Remplacements avec groupes}
   Réutilisation des groupes de capture dans la chaîne de remplacement :
-  \mintedpy{python/regexes/demo-replace-groups}
+  \mintedcustom{python/regexes/demo-replace-groups}{py}{text}
 \end{frame}
 
 \begin{frame}{Tokenisation : Split}
