Don't create a part slide if there's only 1 part
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/templates/jinja2/main.tex
+++ b/templates/jinja2/main.tex
@@ -46,7 +46,7 @@
 %% endif
 
 %% for part in target.parts:
-%% if part.title != None:
+%% if part.title != None and parts | length > 1:
 \begin{frame}[standout]
   \V{part.title}
 \end{frame}
