Improve python intro
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/python/intro/intro.tex
+++ b/shared/latex/python/intro/intro.tex
@@ -42,11 +42,11 @@
   \end{minipage}\hfill
 \end{frame}
 
-\begin{frame}{Plateformes}
-  Différents interpréteurs :
+\begin{frame}{Plates-formes}
+  Différents interpréteurs~:
   \begin{itemize}
-  \item Python/CPython $\Rightarrow$ C
-  \item Jython $\Rightarrow$ Java
+  \item CPython/Pypy $\Rightarrow$ C/C++
+  \item Jython $\Rightarrow$ JVM
   \item IronPython $\Rightarrow$ .Net
   \end{itemize}
 \end{frame}
@@ -63,7 +63,38 @@
   \end{itemize}
 \end{frame}
 
-\begin{frame}{Syntaxe}
-  Utilisation de l'indentation pour délimiter les blocs :
-  \mintedpy{python-blocs}
+\begin{frame}{Environnements de travail}
+  Les trois principaux IDEs Python sont~:
+
+  \begin{description}[<+(1)->]
+    \item[Visual Studio Code] IDE gratuit proposé par Microsoft
+    \item[PyCharm] IDE en double version gratuite/professionnelle proposé par JetBrains
+    \item[Spyder] IDE open source et gratuit orienté data science
+  \end{description}
+
+  \onslide<+(1)->{
+    Ils intègrent tous les outils modernes de développement.
+
+    Cependant vous pouvez bien sûr utiliser votre éditeur de texte favori (emacs, vim, atom, sublime text, …).
+  }
+\end{frame}
+
+\begin{frame}{Versions 2 et 3 de Python}
+  \begin{description}[<+->]
+    \item[Version 2] Plus supportée depuis le premier janvier 2020. Toujours présente dans les bases legacy.
+    \item[Version 3] Version actuelle de Python. Tous les nouveaux développements doivent l'utiliser.
+  \end{description}
+\end{frame}
+
+\begin{frame}{Ressources}
+  \begin{itemize}
+    \item \bluelink{https://docs.python.org/fr/3/}{Documentation officielle Python}
+    \item \bluelink{https://www.reddit.com/r/learnpython/}{Reddit (forum) d'apprentissage de Python}
+    \item \bluelink{https://github.com/nzmognzmp/langage-python/releases/tag/1.0.1}{Support de cours, télécharger le pdf}
+    \item \bluelink{http://pythontutor.com/}{Python Tutor}
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{Installation}
+  Consulter le très bon \bluelink{https://realpython.com/installing-python/}{billet de blog} Real Python sur le sujet.
 \end{frame}
