--- a/shared/latex/python/basics/files.tex
+++ b/shared/latex/python/basics/files.tex
@@ -17,7 +17,7 @@
 
 \begin{frame}{Paramètres les plus importants d'\texttt{open}}
   \begin{description}[<+->]
-    \item[\texttt{mode}] Par défaut, \texttt{"r"} pour lecture. Voir \bluelink{}{ici} pour la liste complète.
+    \item[\texttt{mode}] Par défaut, \texttt{"r"} pour lecture. Voir \bluelink{https://docs.python.org/fr/3/library/functions.html\#open}{ici} pour la liste complète.
     \item[\texttt{encoding}] Par défaut, dépend de la locale. Quasi toujours mettre \texttt{encoding="utf8"}.
   \end{description}
 \end{frame}
