--- a/shared/latex/python/regexes/regexes.tex
+++ b/shared/latex/python/regexes/regexes.tex
@@ -100,7 +100,7 @@
   \begin{description}
   \item[\texttt{re.DOTALL}] Le caractère spécial \texttt{.} capture aussi les retours chariot
   \item[\texttt{re.LOCALE}] Utilisation des définitions de la locale courante pour les captures
-  \item[\texttt{re.MULTILINE}] \texttt{\^{}} et \texttt{\$} matchent les début et fin de chaîne, et non de ligne
+  \item[\texttt{re.MULTILINE}] \texttt{\^{}} et \texttt{\$} matchent les début et fin de ligne, et non de chaîne
   \end{description}
 \end{frame}
 
