--- a/templates/jinja2/main.tex
+++ b/templates/jinja2/main.tex
@@ -21,7 +21,7 @@
 \pgfpagesuselayout{2 on 1}[a4paper]
 %% endif
 
-\setbeamertemplate{frame footer}{\CompanyName{} --- \DeckTitle}
+\setbeamertemplate{frame footer}{\CompanyName{} ⋅ \DeckTitle}
 
 \author{\vfill\TrainerName}
 \institute{%
@@ -36,6 +36,8 @@
 \begin{document}
 
 \NoAutoSpacing
+
+\setcounter{tocdepth}{1}
 
 \maketitle
 
