Fix pdf bookmarks
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/formation.sty
+++ b/formation.sty
@@ -24,6 +24,9 @@
 \usepackage{tikz}
 \usepackage[french]{babel}
 
+\hypersetup{bookmarksdepth=4}
+\setcounter{tocdepth}{1}
+
 \AtBeginEnvironment{quote}{\singlespacing\small}
 
 \DeclareGraphicsExtensions{.pdf,.png,.jpg,.jpeg}
