--- a/shared/tikz/neural-networks/model.tex
+++ b/shared/tikz/neural-networks/model.tex
@@ -18,10 +18,10 @@
     \path[->,>=stealth] (I2) edge [bend  left=20] node [pos=0.45,label distance=1.5,below] {$w_2$} (O);
     \path[->,>=stealth] (I3) edge [bend right=20] node [pos=0.45,label distance=1.5,above] {$w_3$} (O);
     \path[->,>=stealth] (I4) edge [bend right=20] node [pos=0.45,label distance=1.5,above] {$w_4$} (O);
-    \draw[dashed,-] (X) |- (I);
-    \draw[dashed,-] (I) |- (I1);
-    \draw[dashed,-] (I) |- (I2);
-    \draw[dashed,-] (I) |- (I3);
-    \draw[dashed,-] (I) |- (I4);
+    \draw[dashed,-] (X) |- (I.center);
+    \draw[dashed,-] (I.center) |- (I1);
+    \draw[dashed,-] (I.center) |- (I2);
+    \draw[dashed,-] (I.center) |- (I3);
+    \draw[dashed,-] (I.center) |- (I4);
   \end{tikzpicture}
 \end{document}
